# scratch

build-database/: CMakeLists.txt  main.cpp  module.cpp  package-lock.sml  recipe.sml
cpp-circular/: CMakeLists.txt  a.cpp  b.cpp  b.impl.cpp  main.cpp  my-module.cpp  package-lock.sml  recipe.sml
